--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-cypress": "^2.13.4",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~13.1.4",
     "jsonc-eslint-parser": "^2.1.0",
     "ng-packagr": "~17.1.0",
