--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@angular/platform-browser-dynamic": "~17.1.0",
     "@angular/router": "~17.1.0",
     "@nx/angular": "18.0.4",
+    "clsx": "^2.1.0",
     "rxjs": "~7.8.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
