--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/platform-browser-dynamic": "~17.1.0",
     "@angular/router": "~17.1.0",
     "@nx/angular": "18.0.4",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "rxjs": "~7.8.0",
     "tailwind-merge": "^2.2.1",
