--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@angular/platform-browser": "~17.1.0",
     "@angular/platform-browser-dynamic": "~17.1.0",
     "@angular/router": "~17.1.0",
+    "@ng-icons/core": "^26.5.0",
+    "@ng-icons/lucide": "^26.5.0",
     "@nx/angular": "18.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
