refactor: rename npm scope from shadcn-ng to sng

--- a/libs/ui-kit/ui/package.json
+++ b/libs/ui-kit/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@shadcn-ng/ui-kit/ui",
+  "name": "@sng/ui-kit/ui",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^17.1.0",
