--- a/apps/shadcn-ng/.eslintrc.json
+++ b/apps/shadcn-ng/.eslintrc.json
@@ -13,7 +13,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "shadcnNg",
+            "prefix": "sng",
             "style": "camelCase"
           }
         ],
@@ -21,7 +21,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "shadcn-ng",
+            "prefix": "sng",
             "style": "kebab-case"
           }
         ]
