--- a/apps/shadcn-ng/project.json
+++ b/apps/shadcn-ng/project.json
@@ -2,7 +2,7 @@
   "name": "shadcn-ng",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "prefix": "shadcn-ng",
+  "prefix": "sng",
   "sourceRoot": "apps/shadcn-ng/src",
   "tags": [],
   "targets": {
