--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,8 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@shadcn-ng/ui-kit/ui": ["libs/ui-kit/ui/src/index.ts"],
-      "@shadcn-ng/ui-kit/util": ["libs/ui-kit/util/src/index.ts"]
+      "@sng/ui-kit/ui": ["libs/ui-kit/ui/src/index.ts"],
+      "@sng/ui-kit/util": ["libs/ui-kit/util/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
