--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 
 defaults:
   run:
-    working-directory: applications/case-management
+    working-directory: .
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.number }}
